<resources>
    <string name="app_name">ComprasPartilhadas</string>
    <string name="descricao_botao_adicionar_lista">Button to add shopping list</string>
    <string name="descricao_botao_adicionar_produto">Button to add new products</string>
    <string name="options">Options</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="btn_add_lista_str">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_item_str">List</string>
    <string name="quantidade_str">Quantity: %1$d</string>
    <string name="num_item_str">Quantity: %1$d</string>
    <string name="nova_lista_str">Insert the name\'s list...</string>
    <string name="btn_send_lista_str">Send</string>
    <string name="adicionar">Add</string>
    <string name="nomeProduto">Product Name</string>
    <string name="menos">-</string>
    <string name="valorInicial">1</string>
    <string name="mais">+</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! %s"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="listas_de_compras">All shopping lists</string>
    <string name="adicionar_nova_lista">Add new list</string>
    <string name="lista_listname">List {listName}</string>
    <string name="default_desc">No description</string>
    <string name="item_adicionado">Item added!</string>
    <string name="produto_adicionado">Product added!</string>
    <string name="insert_phone_str">Insert the phone number…</string>
    <string name="associacao_adicionada">List associated to user!</string>
    <string name="you_re_logged_already">You\'re logged already!</string>
    <string name="option_not_working">Option not working</string>
    <string name="verify_login_str">Can\'t verify if user are logged in</string>
    <string name="button_to_associate_other_user">Button to associate other user</string>
    <string name="Association">Send List</string>

    <string name="registo">Register</string>

    <string name="insert_item_name">Insert item name</string>
    <string name="add_image">Add image</string>
    <string name="button_to_add_item">Button to add item</string>
    <string name="image_loaded">Image loaded!</string>
    <string name="error_while_loading_image">Error while loading image.</string>
    <string name="no_gallery_access">Gallery access denied!</string>
    <string name="create_account">Create your account</string>
    <string name="email">Email</string>
    <string name="register">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="name_and_price_are_required">Name and price are required</string>
    <string name="item_added">Item added!</string>
    <string name="price_new_item">Price</string>
    <string name="all_items">All products</string>
    <string name="add_item_title">Add new item</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="user_register_success">User registered successfully!</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="password_must_have_8_characters">Password must have, at least, 8 characters</string>
    <string name="this_email_is_already_registered">This email is already registered</string>
    <string name="removed_list">Removed list</string>
    <string name="undo">Undo</string>
    <string name="remove_product">Remove</string>
    <string name="lists">Lists</string>
    <string name="description_product_name">Product\'s name</string>
    <string name="description_product_price">Product\'s price</string>
    <string name="price_str">Price</string>
    <string name="eur_symbol">€</string>
    <string name="imagem_produto">Product\'s Image</string>
    <string name="alterar_nome_da_lista">Change List\'s name</string>
    <string name="guardar">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_user">Delete user</string>
    <string name="confirmation">Confirmation</string>
    <string name="do_you_want_to_delete_this_user">Do you want to delete this user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="total_price_textview">%1$.2f€</string>
    <string name="removed_item">Removed item</string>
    <string name="message_sent_successfully">Message sent successfully.</string>
    <string name="failed_to_send_message">Failed to send message.</string>
    <string name="lista_adicionada">List added!</string>

</resources>